# wry_cmd

./: Cargo.toml  README.md
wry_cmd/: CHANGELOG.md  Cargo.toml
wry_cmd/examples/: simple.rs  trait.rs
wry_cmd/src/: lib.rs
wry_cmd_core/: CHANGELOG.md  Cargo.toml  README.md
wry_cmd_core/src/: lib.rs
wry_cmd_docs/: Cargo.toml
wry_cmd_docs/src/: lib.rs
wry_cmd_macro/: CHANGELOG.md  Cargo.toml  README.md
wry_cmd_macro/src/: lib.rs
