[package]
name = "wry_cmd_core"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Tauri-style IPC command system for Wry apps using with_ipc_handler."
documentation = "https://docs.rs/wry_cmd"
repository = "https://github.com/KitsuneDev/wry_cmd"
readme = "README.md"

[lib]
crate-type = ["rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.17"
inventory = { version = "0.3.20" }
futures = "0.3.31"
percent-encoding = "2.3.1"
